bsfl: added some help

--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -168,12 +168,26 @@ div.loc {
     </div>
   </div>
   <div class = "addon">
-    <p> Predicted Attack / Defense flow diagram: </p>
+    <h3> Predicted Attack / Defense flow diagram: </h3>
     <div id = "prediction"> </div>
-
+    
     <p> <span style="color: #F60">Orange arrows</span>: Attack flow. </p>
     <p> <span style="color: #999">Grey arrows</span>: Intercepted balls. </p>
     <p> <span style="color: #0AF">Blue arrows</span>: Shots blocked by the opponent's defenders and the goalkeeper. </p>
+  </div>
+
+  <div style="clear:both; padding: 2em;">
+    <h3> Player stats and passing explained</h3>
+    <p> Each player has four stats: 
+        <ul>  
+          <li><strong>atk</strong>: attack, shooting</li> 
+          <li><strong>def</strong>: defense, blocking opponent's shots</li>
+          <li><strong>win</strong>: ball winning, interception</li>
+          <li><strong>pas</strong>: passing, moving the ball forward</li>
+        </ul>
+    </p>
+
+    <img src="https://i.imgur.com/WjGUP3y.png" />
   </div>
 
 
