--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -85,10 +85,23 @@
             <li><strong>pas</strong>: passing, moving the ball forward</li>
           </ul>
       </p>
-      <!-- <img src="https://i.imgur.com/WjGUP3y.png" /> -->
+      <img src="https://i.imgur.com/WjGUP3y.png" />
     </section>
 
   </main>
+
+
+  <!-- promo -->
+  <div id="notice" class="w3-modal">
+    <div class="w3-modal-content">
+      <div class="w3-container">
+        <span onclick="document.getElementById('notice').style.display='none'"
+        class="w3-button w3-display-topright">&times;</span>
+        <div id="notice-text">
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
