--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -98,10 +98,10 @@
 
   <!-- promo -->
   <div id="notice" class="w3-modal">
-    <div class="w3-modal-content">
-      <div class="w3-container">
+    <div class="w3-modal-content" style='text-align: center;'>
+      <div class="">
         <span onclick="document.getElementById('notice').style.display='none'"
-        class="w3-button w3-display-topright">&times;</span>
+        class="w3-button w3-display-topright w3-amber">&times;</span>
         <div id="notice-text">
         </div>
       </div>
