--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -6,9 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8"> 
 
-<script src="raphael.min.js"></script>
+<script src="raphael.js"></script>
 <script src="base.js"></script>
 <script src="names.js"></script>
+<script src="clubnames.js"></script>
 <script src="face.js"></script>
 <script src="player.js"></script>
 <script src="model.js"></script>
@@ -54,7 +55,7 @@
       <div class='addon w3-card w3-container'>
         <div class = 'w3-bar'>
           <div class = 'wait-sensitive w3-btn w3-green' onclick='if(state.ready){ play_season(state); }'> Play season <span class='wait-icon'></span> </div>
-          <div class = 'w3-btn w3-pale-green' onclick='show_report(state.team);'> Simulate 12 matches </div>
+          <!-- <div class = 'w3-btn w3-pale-green' onclick='show_report(state);'> Simulate 12 matches </div> -->
         </div>
         <div id = "log" class='' style="max-width: 22em;"></div>
       </div>
