--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -20,10 +20,9 @@
 <script src="transfers.js"></script>
 <script src="main.js"></script>
 
-
-
+<link href="https://fonts.googleapis.com/css?family=Quicksand:700&display=swap" rel="stylesheet"> 
 <!--
-<link href="https://fonts.googleapis.com/css?family=Mali:500|Rubik&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lato|Pacifico&display=swap" rel="stylesheet"> 
 -->
