--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+<title>BSFL - Bestest Soccer Football League</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8"> 
 
@@ -182,12 +184,11 @@
       <h4>TV and sponsor money</h4>
       <table class='w3-table-all'>
       <tr> <th>Division</th> <th>TV and sponsor money (per point)</th> </tr>
-      <tr> <td>0</td> <td>$5K</td> </tr>
-      <tr> <td>1</td> <td>$10K</td> </tr>
-      <tr> <td>2</td> <td>$15K</td> </tr>
-      <tr> <td>3</td> <td>$20K</td> </tr>
-      <tr> <td>4</td> <td>$25K</td> </tr>
+      <tr> <td>M</td> <td>$5K</td> </tr>
+      <tr> <td>L</td> <td>$10K</td> </tr>
+      <tr> <td>K</td> <td>$15K</td> </tr>
       <tr> <td>...</td> <td>...</td> </tr>
+      <tr> <td>A</td> <td>$65K</td> </tr>
       </table>
       
       <h4>Keyboard shortcuts</h4>
