bsfl: upd main link

--- a/bsfl/index.html
+++ b/bsfl/index.html
@@ -139,7 +139,8 @@
       <ul>  
         <li><strong>atk</strong>: attack, shooting (used by CF)</li> 
         <li><strong>def</strong>: defense, blocking opponent's shots (used by CB and GK)</li>
-        <li><strong>win</strong>: ball winning, interception (used by all except GK)</li>
+        <li><strong>win</strong>: ball winning, receiving the ball and pass interception. 
+          It is an aggregate skill combining various skills such as positioning, speed, strength, aggression, etc. (used by all except GK)</li>
         <li><strong>pas</strong>: passing, moving the ball forward (used by all except GK and CF)</li>
       </ul>
       </p>
@@ -184,11 +185,17 @@
       <h4>TV and sponsor money</h4>
       <table class='w3-table-all'>
       <tr> <th>Division</th> <th>TV and sponsor money (per point)</th> </tr>
-      <tr> <td>M</td> <td>$5K</td> </tr>
-      <tr> <td>L</td> <td>$10K</td> </tr>
-      <tr> <td>K</td> <td>$15K</td> </tr>
-      <tr> <td>...</td> <td>...</td> </tr>
-      <tr> <td>A</td> <td>$65K</td> </tr>
+      <tr> <td>J</td> <td>$4K</td> </tr>
+      <tr> <td>I</td> <td>$6K</td> </tr>
+      <tr> <td>H</td> <td>$9K</td> </tr>
+      <tr> <td>G</td> <td>$13K</td> </tr>
+      <tr> <td>F</td> <td>$18K</td> </tr>
+      <tr> <td>E</td> <td>$24K</td> </tr>
+      <tr> <td>D</td> <td>$31K</td> </tr>
+      <tr> <td>C</td> <td>$39K</td> </tr>
+      <tr> <td>B</td> <td>$48K</td> </tr>
+      <tr> <td>A</td> <td>$58K</td> </tr>
+      <!-- <tr> <td>...</td> <td>...</td> </tr> -->
       </table>
       
       <h4>Keyboard shortcuts</h4>
